--- a/modules/admin/testimonials/views/add.html
+++ b/modules/admin/testimonials/views/add.html
@@ -21,10 +21,10 @@
 						<div class="row clearfix">
                             <div class="col-sm-12 align-center">
                                 <div class="form-group add-image">
-                                    <input name="banner_image" id="banner_image" class="form-control image-input-file" type="file"/>
+                                    <input name="image" id="image" class="form-control image-input-file" type="file"/>
                                     <span class="help-inline required banner_image" id="ContentTypeNameSpan">
                                         <div id="pImage">
-                                            <img src="<%=ADD_PROFILE_IMAGE_ICON%>?dim=120x120&type=crop" alt="Banner image" class="profileImage" />
+                                            <img src="<%=ADD_PROFILE_IMAGE_ICON%>" alt="image" class="profileImage" />
                                         </div>
                                     </span>
                                     <div class="m-t-10">
@@ -32,7 +32,7 @@
                                             <%= __("admin.banner.upload_image"); %>
                                         </a>
                                     </div>
-                                    <span id="banner_image_error" class="error"></span>
+                                    <span id="image_error" class="error"></span>
                                 </div>
                             </div>
                         </div>
@@ -95,23 +95,24 @@
 			}
 		});
 	});
-            /**
-             * User image Upload
-             */
-			 $(document).on("click", ".changePhoto", function(){
-                if(!$(".add-image #banner_image").hasClass("added")){
-                    $(".add-image #banner_image").trigger("click");
-                    $(".add-image #banner_image").addClass("added");
-                    window.setTimeout(function(){
-                        $(".add-image #banner_image").removeClass("added");
-                    },500);
-                }
-            });
 
-            /**
-             *Show user image after select
-             */
-            $("#banner_image").on("change", function(){
+	/**
+	 * User image Upload
+	 */
+		$(document).on("click", ".changePhoto", function(){
+		if(!$(".add-image #image").hasClass("added")){
+			$(".add-image #image").trigger("click");
+			$(".add-image #image").addClass("added");
+			window.setTimeout(function(){
+				$(".add-image #image").removeClass("added");
+			},500);
+		}
+	});
+
+	/**
+	 *Show user image after select
+		*/
+	$("#image").on("change", function(){
                 var files = !!this.files ? this.files : [];
                 if (!files.length || !window.FileReader) return; // no file selected, or no FileReader support
 
@@ -124,6 +125,6 @@
                         $("#pImage").html("<img src='"+this.result+"' class='profileImage' >");
                     }
                 }
-                $("span #banner_image_error").text("");
+                $("span #image_error").text("");
             });
 </script>
