product listing api

--- a/modules/admin/products/views/add.html
+++ b/modules/admin/products/views/add.html
@@ -45,7 +45,7 @@
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <div class="form-line">
-                                        <label for="discount_price" class="control-label"><%= __('admin.product.discount_price'); %><span class="required"> * </span> </label>
+                                        <label for="discount_price" class="control-label"><%= __('admin.product.discount_percentage'); %><span class="required"> * </span> </label>
                                         <input name="discount_price" id="discount_price" type="number" class="form-control"/>
                                     </div>
                                     <span id="discount_price_error" class="error"></span>
@@ -57,7 +57,7 @@
                                     <div class="file-group">
                                         <i><img src="https://icon-library.com/images/upload-icon-image/upload-icon-image-12.jpg"></i>
                                         <p class="file-text"><span class="red-text">Browse</span></p>
-                                        <input type="file" class="form-control" name="images" id="images" multiple/>
+                                        <input type="file" class="form-control" name="images" id="images" />
                                     </div>
                                     <span id="images_error" class="error"></span>
                                 </div>
